--- a/css/layout.css
+++ b/css/layout.css
@@ -15,9 +15,9 @@ html, body {
 body.register-page{
     
 }
-#content{
+/*#content{
   min-height: 100vh;
-}
+}*/
 section.footer-section{
   position: relative;
 }
@@ -27,11 +27,23 @@ section.footer-section::before {
     background-size: 100% 100%;
     content: '';
     position: absolute;
-    height: 31rem;
+    height: 20rem;
     width: 100%;
-    top: -31rem;
+    top: -15rem;
     z-index: -1;
 }
+.otp.section.footer-section::before {
+    background-image: url(../img/regist-mbl-bg.png) !important;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    content: '';
+    position: absolute;
+    height: 23rem;
+    width: 100%;
+    top: -34rem;
+    z-index: -1;
+}
+
 .navbar-inverse {
     background-color: #fff;
     border-color: #fff;
@@ -69,11 +81,12 @@ section.footer-section::before {
   /* color: #f7892f !important;*/
   cursor: pointer;
 }
-.container.main-area.bg{
+/*.container.main-area.bg{
   background-image: url(../img/main-top.png);
   background-size: 100% 45%;
   background-repeat: no-repeat;
-}
+      margin-top: -10%;
+}*/
 .main-area::after{
 
 }
@@ -153,7 +166,7 @@ section.footer-section::before {
   margin:4rem 0 !important;
 }*/
 .banner-container .fake{
-    height: 13em;
+    height: 16em;
     width: 75%;
 }
 .font-weight-bold {
@@ -161,6 +174,10 @@ section.footer-section::before {
 }
 .modal-header {
     text-align: center;
+    border: none !important;
+}
+.modal-footer{
+  border: none !important;
 }
 .modal{
     margin-top: 3rem;
@@ -198,12 +215,10 @@ section.footer-section::before {
 }
 
 .footer-section{
-   background-image: linear-gradient(to top, #fad961, #f76b1c);
-   color:white;
    font-size: 1.3rem;
 }
 .page-footer a{
-  color:white;  
+  color:#000;  
 }
 .navbar-light .navbar-toggler-icon{
     background-image: url('data:image/svg+xml;charset=utf8,<svg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'><path stroke='rgba(213,26,27)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/></svg>''); 
@@ -224,6 +239,59 @@ button.btn:active {
 .otp-container{
   cursor: pointer;
 }
+
+/*search dropdown*/
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+#myInput {
+  border-box: box-sizing;
+  background-image: url('searchicon.png');
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {outline: 3px solid #ddd;}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
 
 @media (min-width: 992px) {
   .main-area{
