--- a/css/iplStyle.css
+++ b/css/iplStyle.css
@@ -76,3 +76,169 @@
 	background:url('../img/cricketBall.png') no-repeat;
 	left: 1rem;
 }
+.nolive{
+	position: relative;
+	font-size: 2rem !important;
+	margin-top: 8rem !important;
+}
+.nolive:before{
+	content: '';
+    position: absolute;
+    height: 8rem;
+    width: 6rem;
+    background: url(../img/batsman-l.png) no-repeat;
+    left: 10rem;
+    top: -10rem;
+    background-size: 100% 100%;
+}
+
+.txt-8{
+  font-size: 8px;
+}
+.txt-10{
+  font-size: 10px;
+}
+.team{
+  position: relative;
+  font-weight: bold;
+}
+.title-mum:after{
+  content: 'Vs';
+  color: #df0827;
+  font-weight: 650;
+  position: absolute;
+  right: 0;
+  top: 1rem;
+  font-size: 2rem;  
+}
+.team-vs-mum:before{
+  background: url(../img/mum.png) no-repeat;
+   background-repeat:no-repeat;
+   content: '';
+   position:absolute;
+   height:5rem;
+   width:6rem;
+   left:-17%;
+   top:7px;
+}
+
+.team-vs-ban:after{
+   background: url(../img/ban.png) no-repeat;
+   content: '';
+   position:absolute;
+   height:5rem;
+   width:6rem;
+   right:-40%;
+   top:7px;
+}
+.match-date{
+  margin-left: -2.6rem;
+}
+.match-time{
+  background: #9b9b9b;
+  color: white;
+  border-radius: 3px;
+  padding: 5px 3px;
+  text-align: center;
+
+}
+.teams{
+    position:relative;
+}
+.team-icon{
+    position:relative;
+}
+.team1{
+    padding-left:6rem;
+}
+
+.team2{
+    padding-right:2rem;
+    padding-left:4.5rem;
+}
+.team1 .team-icon:before{
+    content:'';
+    position:absolute;
+    height:4rem;
+    width:4rem;
+    top:0rem;
+    left:-4.5rem;
+    background:url('../img/mum.png') no-repeat;
+}
+.team2 .team-icon:after{
+    content:'';
+    position:absolute;
+    height:4rem;
+    width:4rem;
+    top:0rem;
+    right:-12.8rem;
+    background:url('../img/ban.png') no-repeat;
+}
+
+.team2 span.content {
+    content: '';
+    position: absolute;
+    color: #ffffff;
+    top: 2.9rem;
+    right: 13.4rem;
+    font-size: 1.2rem;
+}
+
+.team1 span.content {
+    content: '';
+    position: absolute;
+    color: #ffffff;
+    top: 3rem;
+    left: 11.2rem;
+    font-size: 1.2rem;
+}
+.card-panel{
+	background: #625e5ebd;
+	border-radius: 1.2rem;
+}
+.ball-icon:before{
+	content: '';
+	position: absolute;
+	height: 2rem;
+	width:3rem;
+	background:url('../img/cricketBall.png') no-repeat;
+	left: 1rem;
+}
+.over{
+	padding-left: 3.8rem
+}
+.won span{
+	color: #3c763d;
+	background: #dff0d8;
+	padding: 0.5rem 1rem;
+	font-size: 1.4rem;
+	border-radius: 2rem;
+}
+.quest{
+	font-size: 2rem;
+}
+.answer{
+	padding: 0 6rem;
+}
+.coin{
+	position: relative;
+}
+.coin:before{
+	content: '';
+    position: absolute;
+    height: 2rem;
+    width: 2rem;
+    background: url(../img/coin.png);
+    top: 0rem;
+    left: 3rem;
+}
+
+.game-top{
+  position: relative;
+}
+.game-top .top-coin{
+  position: absolute;
+	right: -8rem;
+	top: 1.3rem;
+	margin-right: -8rem;
+}
